fix: container width on small devices

--- a/src/app/components/flyover-controls/flyover-controls.component.scss
+++ b/src/app/components/flyover-controls/flyover-controls.component.scss
@@ -3,7 +3,6 @@
 
 .component-container {
   margin-top: 4px;
-  padding: 4px;
   border-radius: 8px;
 
   background: var(
